# python-examples

./: .gitignore  3dplot.py  CONTRIBUTING.md  Pipfile  README.md  bucles1.py  control.py  dni.py  edad.py  entrada.py  fibonacci.py  matrixExample.py  pyproject.toml  requirements.txt  wolframExample.py
basic-examples/: bucles.py  control1.py  euclides.py  fibonacci.py  funcion.py  hola.py  maze_print.py  prueba.py  sesion_1_1.py  wolframExample.py
basic_examples/: wolframExample.py
bokeh/: grouped_bar_plot_example_01.py  stacked_plot_example.py  stacked_plot_example_02.py
cli_scripting/: torrent_crawler.py
data_sets/: ThoraricSurgery_discrete.csv  credit.csv  data_sets.py  logic_data_set.py  logic_function.csv  weather_nominal.csv  weather_semi_nominal.csv
data_structures/: labeled_tree.py
django_first_app/: README.md  db.sqlite3  manage.py
graphene-django-tutorial/: db.sqlite3
hacker_rank/: insertion_sort_part_1.py  lena_sort.py  lonely_integer.py  subset_component.py  super_reduced_string.py  two_characters.py
math/: interpreter.py  template.py
miscellaneous/: maze_print.py  wolframExample.py
notebooks/: bokeh-datetime-hover.ipynb  getting-started.ipynb  matrix-decomposition.ipynb  metropolis-hastings.ipynb  tensorflow-getting-started.ipynb
numerical/arrow/: read.py  (+3 more)
scripting/: torrent_crawler.py
stats/: stats_template.py  uniform-cos-transformation.py
t3chfest-2017/: task-1.py  task-2.py  task-3.py  task-4.py  task-5.py  task-6.py
tensor_flow/: hello_world.py  naive_pagerank.py  pagerank_wiki_vote.py  sparse_from_file.py
utils/: json.py
(+409 files in other folders)
