[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["garciparedes <sergio@garciparedes.me>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "=1.15.0"
matplotlib = ">=2.2.2"
pandas = ">=0.23.4"
scipy = ">=1.1.0"
mpmath = ">=1.0.0"
sympy = ">=1.2"
wolframalpha = ">=3.0.1"
graphene-django = ">=2.2.0"
scikit-learn = ">=0.21.1"
fabric = "*"
docker = "*"
ortools = "^7.4"
modin = {version = "^0.6.2", extras = ["all"]}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
