[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["garciparedes <sergio@garciparedes.me>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.0"
matplotlib = "^3.1"
pandas = "^0.25"
scipy = "^1."
mpmath = "^1.0"
sympy = "^1.2"
wolframalpha = "^3.0"
graphene-django = "^2.2"
scikit-learn = "^0.21"
fabric = "*"
docker = "*"
ortools = "^7.4"
modin = {version = "^0.6", extras = ["all"]}
deap = "^1.3"
pyarrow = "^0.15"
dask = {extras = ["dataframe"], version = "^2.9.2"}
vaex = "^2.5.0"
jupyterlab = "^1.2.5"
jupyter = "^1.0.0"
tables = "^3.6.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry^1.0"]
build-backend = "poetry.masonry.api"
